<resources>
    <string name="app_name">qapital</string>
    <string name="welcome">"Welcome !"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_debt">Debt</string>
    <string name="txt_add_transaction">Add\nTransaction</string>
    <string name="btn_expense">Expense</string>
    <string name="btn_income">Income</string>
    <string name="edt_transaction_amount">Amount</string>
    <string name="edt_transaction_name">Name</string>
    <string name="edt_transaction_note">Enter your note here</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_update_cancel">Cancel</string>
    <string name="txt_debt_details">Debt Details</string>
    <string name="txt_transaction_date_details">01 January 2002</string>
    <string name="txt_transaction_type">Debt</string>
    <string name="txt_transaction_amount">Amount : </string>
    <string name="transaction_amount_details">99999.99</string>
    <string name="txt_transaction_information">Debt Information</string>
    <string name="edt_borrowed_date">Borrowed Date</string>
    <string name="edt_return_date">Return Date</string>
    <string name="btn_paid">Paid</string>
    <string name="btn_back">Click this buttton to go back</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit details</string>

    <string name="edt_transaction_title">Title</string>
    <string name="category_food">Food</string>
    <string name="category_beverage">Beverages</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_education">Education</string>
    <string name="category_bills">Bills</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_communication">Communication</string>
    <string name="edt_expense_date">Date</string>
    <string name="txt_expense_details">Expense Details</string>
    <string name="edt_expense_category">Category</string>


    <string name="Loging_form">Loging</string>
    <string name="Logging">Logging</string>
    <string name="enteremail">Enter e-mail</string>
    <string name="enterPassword">Enter Password</string>
    <string name="SignIn">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="nameOfuser">Lakindu Widuranga</string>
    <string name="balance_text">Balance</string>
    <string name="income_txt">Income</string>
    <string name="expenses">Expenses</string>
    <string name="BalanceTotals">Rs.42000</string>
    <string name="IncomeTotal">Rs.65000</string>
    <string name="ExpensesTotal">Rs.23000</string>
    <string name="ExpensesTotals">Rs.23000</string>
    <string name="chng_image">Change Image</string>
    <string name="new_name">Enter New Name</string>
    <string name="new_mail">Enter New Email</string>
    <string name="new_pw">Enter New Password</string>
    <string name="save">Save</string>
    <string name="new_email">Enter New Email</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="quote">\"Never spend your money before you have it\"</string>
    <string name="Notification1">You have to pay Rs.3500 to Kamal before next Friday</string>
    <string name="Notification2">You have to pay Rs.5000 for Anura Tomorrow</string>
    <string name="signin">Sign In</string>
    <string name="Home">Home</string>
    <string name="error_empty_fields">Please enter both email and password.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="welcome_message" />
    <string name="Setting">Setting</string>
    <string name="email">vidurangalakindu@gmail.com</string>
    <string name="Settings">Settings</string>
    <string name="signout">Sign Out</string>
    <string name="Incomes">Incomes</string>
    <string name="Expenses">Expenses</string>
    <string name="Debits">Debits</string>

</resources>