<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditActivity"
    android:background="@drawable/edit_profile"
    >

    <Button
        android:id="@+id/save_btn"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/signin_button"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangePassword"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/ChangePassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/new_pw"
        android:inputType="textPersonName"

        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChangeName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/Settings"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ChangeName"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/new_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="168dp"
        android:width="150dp"
        android:background="@drawable/delete_button"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>