<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="624dp"
        android:layout_height="1087dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@drawable/profile_background" />

    <View
        android:id="@+id/view3"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/view_expenses_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/button3"
        android:layout_width="82dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="269dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/profilpic"
        android:layout_width="217dp"
        android:layout_height="190dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="90dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pro_pic" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="227dp"
        android:layout_height="75dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="111dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/nameOfuser"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilpic" />

    <View
        android:id="@+id/viewBalance"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/view_balance_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <View
        android:id="@+id/view2"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/view_income_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBalance" />

    <TextView
        android:id="@+id/income_total"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/IncomeTotal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/balance_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/viewBalance"
        app:layout_constraintStart_toStartOf="@+id/viewBalance"
        app:layout_constraintTop_toTopOf="@+id/viewBalance" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="94dp"
        android:layout_height="33dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/income_txt"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/expenses"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/Income_total"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/BalanceTotals"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/viewBalance"
        app:layout_constraintStart_toStartOf="@+id/viewBalance"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/income_total2"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/ExpensesTotals"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>