<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Add your views here -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="498dp"
        android:layout_height="861dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.672"
        app:srcCompat="@drawable/edit_profile" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="303dp"
        android:background="@drawable/signin_button"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/new_pw"
        android:inputType="textPersonName"
        android:paddingStart="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/new_email"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="139dp"
        android:layout_height="119dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/chng_image"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/new_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
