<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view5"
        android:layout_width="375dp"
        android:layout_height="76dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/notificaiton_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view4"
        android:layout_width="375dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/notificaiton_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="252dp"
        android:layout_height="44dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/notifications"
        android:textAlignment="center"
        android:textColor="@color/Primary_Color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="375dp"
        android:layout_height="76dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/notificaiton_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="337dp"
        android:layout_height="65dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/quote"
        android:textColor="@color/Primary_Color"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />
        />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/Notification1"
        android:textColor="@color/Primary_Color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/Notification2"
        android:textColor="@color/Primary_Color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />/>
</androidx.constraintlayout.widget.ConstraintLayout>